--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -1,21 +1,25 @@
 # yaml-language-server: $schema=https://json.schemastore.org/cloudbuild.json
+
 steps:
-  - name: "gcr.io/cloud-builders/docker"
-    args:
-      [
-        "build",
-        "-t",
-        "southamerica-west1-docker.pkg.dev/turnkey-skill-461919-g3/image-registry/orders-ms",
-        "-f",
-        "dockerfile.prod",
-        "--platform=linux/amd64",
-        ".",
-      ]
-  - name: "gcr.io/cloud-builders/docker"
-    args:
-      [
-        "push",
-        "southamerica-west1-docker.pkg.dev/turnkey-skill-461919-g3/image-registry/orders-ms",
-      ]
+- name: 'gcr.io/cloud-builders/docker'
+  entrypoint: 'bash'
+  args:
+    - -c
+    - |
+      docker build -t southamerica-west1-docker.pkg.dev/turnkey-skill-461919-g3/image-registry/orders-ms -f dockerfile.prod --platform=linux/amd64 --build-arg ORDERS_DATABASE_URL=$$DATABASE_URL .
+  secretEnv: ['DATABASE_URL']
+
+- name: 'gcr.io/cloud-builders/docker'
+  args:
+    [
+      'push',
+      "southamerica-west1-docker.pkg.dev/turnkey-skill-461919-g3/image-registry/orders-ms",
+    ]
+
 options:
   logging: CLOUD_LOGGING_ONLY
+
+availableSecrets:
+  secretManager:
+  - versionName: projects/388031323267/secrets/orders_database_url/versions/1
+    env: 'DATABASE_URL'
