--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -6,7 +6,7 @@ steps:
   args:
     - -c
     - |
-      docker build -t southamerica-west1-docker.pkg.dev/turnkey-skill-461919-g3/image-registry/orders-ms -f dockerfile.prod --platform=linux/amd64 --build-arg ORDERS_DATABASE_URL=$$DATABASE_URL .
+      docker build -t southamerica-west1-docker.pkg.dev/turnkey-skill-461919-g3/image-registry/orders-ms -f dockerfile.prod --platform=linux/amd64 --build-arg ORDER_MS_DATABASE=$$DATABASE_URL .
   secretEnv: ['DATABASE_URL']
 
 - name: 'gcr.io/cloud-builders/docker'
